fix: tweets swagger docs
